# be-wallet-management

py-account/: .gitignore  pyproject.toml
py-account/.assistant/context/: architecture.md
py-account/.assistant/rules/: convention.md  domain_rules.md  exception_convention.md
py-account/app/exceptions/: base.py  infrastructure.py  service.py
py-account/app/helpers/: email.py  password.py
py-account/app/infrastructures/databases/postgresql/: connection.py
py-account/app/infrastructures/databases/postgresql/models/: user.py
py-account/app/infrastructures/databases/postgresql/repositories/: user.py
py-account/app/infrastructures/security/: exceptions.py  jwt.py
py-account/app/repository/interfaces/: user.py
py-account/app/repository/models/: base.py  user.py
py-account/app/schemas/: auth.py
py-account/app/services/: exceptions.py
py-account/app/services/interfaces/: auth.py
py-account/app/tests/unit/infrastructures/security/: test_jwt.py
py-account/app/tests/unit/repository/models/: test_base.py  test_user.py
py-account/assistant/progress/: changelog.md
py-account/tests/unit/infrastructures/security/: test_jwt.py
